<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.adminapp.modules.main.view.fragment.DeleteUsuarioFragment"
    android:weightSum="10"
    android:orientation="vertical">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9.5"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/colorPrimary"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center|top"
                android:layout_marginTop="-60dp"
                android:padding="5dp"
                android:src="@drawable/round" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center|top"
                android:layout_marginTop="-120dp"
                android:padding="20dp"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/delete_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/login_til_user"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_gravity="start|center_vertical"
                        app:counterOverflowTextAppearance="@style/AppCustomLoginTextInputLayout"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/id_txt"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:drawableStart="@drawable/ic_document"
                            android:drawablePadding="5dp"
                            android:hint="@string/lbl_cedula"
                            android:inputType="number"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                            android:textColor="@android:color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|center_vertical"
                    android:gravity="end">

                    <Button
                        android:id="@+id/btn_consultar"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/short_button_dark"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/btn_consultar"
                        android:textColor="@android:color/white" />
                </LinearLayout>


            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/insert_til_name"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:counterOverflowTextAppearance="@style/AppCustomLoginTextInputLayout"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_txt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="5dp"
                    android:hint="@string/lbl_name"
                    android:inputType="text"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/insert_til_phone"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:counterOverflowTextAppearance="@style/AppCustomLoginTextInputLayout"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_txt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="5dp"
                    android:hint="@string/lbl_phone"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal">
                    <Button
                        android:id="@+id/delete_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/short_button_dark"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center_vertical|center_horizontal"
                        android:enabled="false"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/btn_eliminar"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal">
                    <Button
                        android:id="@+id/cancel_delete_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/short_button_dark"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center_vertical|center_horizontal"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/btn_cancelar"
                        android:textColor="@android:color/white" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>
